--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>Suamalie 2048</title>
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Newsreader:wght@300&display=swap" rel="stylesheet">
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -19,7 +21,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2048</h1>
+      <h1 class="title">Suamalie 2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -27,7 +29,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong>Suamalie themed!</p>
       <a class="restart-button">New Game</a>
     </div>
 
