🌷🚩 Checkpoint ./style/main.css:24103341/86

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong>Suamalie themed!</p>
+      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong> Suamalie themed!</p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -86,9 +86,9 @@
     Game created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> This version was made by Arielle Shah. Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
-  <div class="testing">
-    512
-  </div>
+  <!--<div class="testing">
+    
+  </div> -->
 
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
