😚🛬 Checkpoint ./style/main.css:24103341/14 ./index.html:24103341/43

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is NOT the official version of 2048. You can play the real version on your phone via <a href="http://git.io/2048">http://git.io/2048.</a>
+    <strong class="important">Note:</strong> This site is NOT the official version of 2048. You can play the real version on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> It is blocked on school computers.
     </p>
     <hr>
     <p>
