🌎🌸 Checkpoint ./index.html:24103341/72 ./style/main.css:24103341/73

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong> Suamalie themed!</p>
+      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong> Suamalie themed! Made for 7th grade utopia project. Suamalie is a candy-themed utopia.</p>
       <a class="restart-button">New Game</a>
     </div>
 
